// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App removing rendered expression 1`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"js\\",
  \\"expr\\": \\"test expression\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  >
    <span
      data-component="FormActions"
      data-props="{}"
    />
  </span>
  <span
    data-component="Render"
    data-props="{
  \\"data\\": \\"LAYOUT(PARSED(test expression))\\"
}"
  />
</DocumentFragment>
`;

exports[`App removing rendered expression 2`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"js\\",
  \\"expr\\": \\"\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  />
</DocumentFragment>
`;

exports[`App rendering 1`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"js\\",
  \\"expr\\": \\"\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  />
</DocumentFragment>
`;

exports[`App rendering an expression 1`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"js\\",
  \\"expr\\": \\"\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  />
</DocumentFragment>
`;

exports[`App rendering an expression 2`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"js\\",
  \\"expr\\": \\"test expression\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  />
  <span
    data-component="Loader"
    data-props="{}"
  />
</DocumentFragment>
`;

exports[`App rendering an expression 3`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"js\\",
  \\"expr\\": \\"test expression\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  >
    <span
      data-component="FormActions"
      data-props="{}"
    />
  </span>
  <span
    data-component="Render"
    data-props="{
  \\"data\\": \\"LAYOUT(PARSED(test expression))\\"
}"
  />
</DocumentFragment>
`;

exports[`App rendering with an invalid syntax 1`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"invalid\\",
  \\"expr\\": \\"\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  />
</DocumentFragment>
`;

exports[`App rendering with an invalid syntax 2`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"invalid\\",
  \\"expr\\": \\"test expression\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  />
  <span
    data-component="Loader"
    data-props="{}"
  />
</DocumentFragment>
`;

exports[`App rendering with an invalid syntax 3`] = `
<DocumentFragment>
  <span
    data-component="Form"
    data-props="{
  \\"syntax\\": \\"invalid\\",
  \\"expr\\": \\"test expression\\",
  \\"syntaxList\\": [
    {
      \\"id\\": \\"testJS\\",
      \\"label\\": \\"Testing JS\\"
    },
    {
      \\"id\\": \\"other\\",
      \\"label\\": \\"Other\\"
    }
  ]
}"
  />
  <span
    data-component="Message"
    data-props="{
  \\"type\\": \\"error\\",
  \\"heading\\": \\"TRANSLATE(Render Failure)\\"
}"
  >
    <p>
      <span
        data-component="Trans"
        data-props="{}"
      >
        An error occurred while rendering the regular expression.
      </span>
    </p>
    <a
      href="#retry"
    >
      <span
        data-component="Trans"
        data-props="{}"
      >
        Retry
      </span>
    </a>
  </span>
</DocumentFragment>
`;
